[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rivt"
version = "0.1.0"
description = "Your architecture, enforced."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ahmed Abbas" },
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pyright>=1.1,<2",
    "ruff>=0.15,<1",
    "pre-commit>=4.5.1",
]

[project.scripts]
rivt = "rivt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rivt = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "PIE", "RUF", "T20",
    "FURB", "PTH", "A", "PERF", "ARG", "FLY", "BLE", "PL", "RSE", "TRY", "ERA",
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "TRY003",   # Long exception messages
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"src/rivt/rules/__init__.py" = ["E402"]
"src/rivt/cli.py" = ["T201"]
"src/rivt/config.py" = ["T201"]
"src/rivt/plugins.py" = ["T201", "BLE001", "PLC0415"]
"src/rivt/rules/*.py" = ["ARG002"]
"tests/*" = ["PLC0415"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
